--- a/Debug/default_cds.cfg
+++ b/Debug/default_cds.cfg
@@ -1,10 +1,11 @@
 [options]
 
-version: 1.415
-file_version: 1.415
+app_folder: "D:\FreePCBDev\Schematic Constructor\.\Debug"
+version: 1.416
+file_version: 1.416
 project_name: ""
 library_folder: "c:\users\duxah\desktop\duxah\freepcbdoc\freepcbdev\upload_latest_version\lib"
-parent_folder: "D:\Разработки\Projects\Micronix"
+parent_folder: "D:\Разработки\Projects\duxahtech"
 full_library_folder: "c:\users\duxah\desktop\duxah\freepcbdoc\freepcbdev\upload_latest_version\lib\footprints"
 CAM_folder: ""
 netlist_completed: "0"
@@ -27,7 +28,7 @@ default_node_width: -800000
 autosave_interval: 60
 m_client_rect_left: 0
 m_client_rect_right: 1132
-m_client_rect_bottom: 592
+m_client_rect_bottom: 593
 m_client_rect_top: 0
 m_org_x: -81810
 m_org_y: -58081
