--- a/Debug/default_cds.cfg
+++ b/Debug/default_cds.cfg
@@ -1,48 +1,48 @@
 [options]
 
-version: 1.416
-file_version: 1.416
-project_name: "Регулятор-01.cds"
-library_folder: "c:\рабочая папка\freepcb_libraries"
-parent_folder: "D:\Разработки\Projects\duxahtech"
-full_library_folder: "c:\рабочая папка\freepcb_libraries\lib_footprints"
-CAM_folder: "C:\FreePcbDev\Schematic Constructor\Projects\related_files\print_layers"
+version: 1.418
+file_version: 1.418
+project_name: "D6384-1-01.cds"
+library_folder: "D:\FreePCBDev\Schematic Constructor\.\Projects\micronics\lib"
+parent_folder: "d:\freepcbdev\schematic constructor\.\projects"
+full_library_folder: "?\micronics\lib\footprints"
+CAM_folder: ""
 netlist_completed: "0"
-bom_options: "721056"
+bom_options: "160"
 page_number: "0"
 parent_index: "2"
 alignment: 0.70
 partlist_size_x: "534"
-partlist_size_y: "194"
-partlist_pos_x: "105"
-partlist_pos_y: "69"
+partlist_size_y: "391"
+partlist_pos_x: "1088"
+partlist_pos_y: "95"
 partlist_col_w: "960223292"
 find_component: "https://www.google.com/search?q="
 special_chars: "°±©"
 netlist_file_path: ""
 netlist_format: 0
 page_mirror_mask: 0
-default_font: 2
+default_font: 11
 default_node_width: -1100000
 autosave_interval: 60
 m_client_rect_left: 0
-m_client_rect_right: 1532
-m_client_rect_bottom: 726
+m_client_rect_right: 1132
+m_client_rect_bottom: 713
 m_client_rect_top: 0
-m_org_x: -138737
-m_org_y: -57334
-m_scale_factor: 293037
-m_attr_size: 2200000 300000 2200000 300000 2200000 300000 2200000 300000 2200000 300000 2200000 300000
+m_org_x: -44382
+m_org_y: -21114
+m_scale_factor: 30454
+m_attr_size: 500000 50000 1000000 110000 1000000 110000 1000000 110000 500000 50000 500000 50000
 m_system_colors: 1
 m_measure_scale: 30
 m_arrow_scale: 7
 units: MM
 
 m_sel_mask: -1
-m_visible_layers: 524287
+m_visible_layers: 2097147
 m_top_layer: 6
 m_grid_style: 0
-visible_grid_spacing: 5000000.000000
+visible_grid_spacing: 2000000.000000
   visible_grid_item: 20mil
   visible_grid_item: 50mil
   visible_grid_item: 100mil
@@ -68,7 +68,7 @@ visible_grid_spacing: 5000000.000000
   visible_grid_item: 50mm
   visible_grid_item: 100mm
 
-polyline_grid_spacing: 500000.000000
+polyline_grid_spacing: 200000.000000
   placement_grid_item: 5mil
   placement_grid_item: 10mil
   placement_grid_item: 20mil
@@ -98,7 +98,7 @@ polyline_grid_spacing: 500000.000000
   placement_grid_item: 5mm
   placement_grid_item: 10mm
 
-text_grid_spacing: 100000.000000
+text_grid_spacing: 250000.000000
   text_grid_item: 0.1mil
   text_grid_item: 0.5mil
   text_grid_item: 1mil
@@ -143,68 +143,70 @@ cam_units: 1
 
 report_options: 0
 drc_check_unrouted: 0
-drc_part_attr_to_attr: 100000
-drc_part_attr_to_poly: 100000
+drc_part_attr_to_attr: 0
+drc_part_attr_to_poly: -10000000
 drc_pin_attr_to_attr: 254000
 drc_pin_attr_to_poly: 254000
 
-default_polyline_width:0.3mm
-n_additional_layers: 4
+default_polyline_width:0.2mm
+n_additional_layers: 6
 m_pdf_font_i: 22
 m_pdf_margin: 0.01
 pdf_checking: 34
-  layer_info: "dragging" 0 130 130 130 1
-  layer_info: "background" 1 100 100 100 1
-  layer_info: "visible grid" 2 97 97 97 1
-  layer_info: "highlight" 3 255 255 0 1
-  layer_info: "DRC error" 4 255 255 0 1
-  layer_info: "ownerless line" 5 255 0 0 1
-  layer_info: "part outline" 6 205 205 205 1
-  layer_info: "part name" 7 205 205 205 1
-  layer_info: "pin line" 8 255 255 128 1
-  layer_info: "pin name" 9 255 255 128 1
-  layer_info: "net polyline" 10 255 255 255 1
-  layer_info: "net name" 11 255 255 255 1
-  layer_info: "footprint" 12 128 255 255 1
-  layer_info: "part value" 13 255 128 192 1
-  layer_info: "description" 14 157 157 157 1
-  layer_info: "front layer 1" 15 255 255 255 1
-  layer_info: "front layer 2" 16 255 128 0 1
-  layer_info: "back layer 1" 17 0 0 0 1
-  layer_info: "back layer 2" 18 128 128 255 1
+  layer_info: "перемещение" 0 130 130 130 1
+  layer_info: "фон доски" 1 178 178 178 1
+  layer_info: "видимая сетка" 2 22 22 22 0
+  layer_info: "подсветка" 3 255 255 0 1
+  layer_info: "метки" 4 0 255 128 1
+  layer_info: "безхозный" 5 255 0 0 1
+  layer_info: "контур детали" 6 233 233 233 1
+  layer_info: "обозначения" 7 192 192 192 1
+  layer_info: "линни пинов" 8 0 255 128 1
+  layer_info: "имена пинов" 9 0 255 128 1
+  layer_info: "линни цепей" 10 164 190 255 1
+  layer_info: "имена цепей" 11 255 0 0 1
+  layer_info: "футпринты" 12 255 132 132 1
+  layer_info: "названия" 13 255 255 255 1
+  layer_info: "описания" 14 160 160 160 1
+  layer_info: "верхний 1" 15 255 255 255 1
+  layer_info: "верхний 2" 16 0 255 0 1
+  layer_info: "нижний 1" 17 0 0 0 1
+  layer_info: "нижний 2" 18 128 128 255 1
+  layer_info: "нижний 3" 19 99 190 211 1
+  layer_info: "нижний 4" 20 60 110 200 1
 
-  pdf_layer_info: "dragging" 0 255 255 255 0
-  pdf_layer_info: "background" 1 255 255 255 0
-  pdf_layer_info: "visible grid" 2 255 255 255 0
-  pdf_layer_info: "highlight" 3 255 255 0 1
-  pdf_layer_info: "DRC error" 4 0 0 0 1
-  pdf_layer_info: "ownerless line" 5 0 0 0 1
-  pdf_layer_info: "part outline" 6 0 0 0 1
-  pdf_layer_info: "part name" 7 0 0 166 1
-  pdf_layer_info: "pin line" 8 0 0 0 1
-  pdf_layer_info: "pin name" 9 0 0 0 1
-  pdf_layer_info: "net polyline" 10 43 85 85 1
-  pdf_layer_info: "net name" 11 0 0 0 1
-  pdf_layer_info: "footprint" 12 166 0 0 1
-  pdf_layer_info: "part value" 13 0 0 0 1
-  pdf_layer_info: "description" 14 0 0 0 1
-  pdf_layer_info: "front layer 1" 15 0 0 0 1
-  pdf_layer_info: "front layer 2" 16 133 133 133 1
-  pdf_layer_info: "back layer 1" 17 255 255 255 1
-  pdf_layer_info: "back layer 2" 18 197 197 197 1
-  pdf_layer_info: "back layer 3" 19 255 255 255 0
-  pdf_layer_info: "back layer 4" 20 255 255 255 0
-  pdf_layer_info: "back layer 5" 21 255 255 255 0
-  pdf_layer_info: "back layer 6" 22 255 255 255 0
-  pdf_layer_info: "back layer 7" 23 255 255 255 0
-  pdf_layer_info: "back layer 8" 24 255 255 255 0
-  pdf_layer_info: "back layer 9" 25 255 255 255 0
-  pdf_layer_info: "back layer 10" 26 255 255 255 0
-  pdf_layer_info: "back layer 11" 27 255 255 255 0
-  pdf_layer_info: "back layer 12" 28 255 255 255 0
-  pdf_layer_info: "back layer 13" 29 255 255 255 0
-  pdf_layer_info: "back layer 14" 30 255 255 255 0
+  pdf_layer_info: "перемещение" 0 255 255 255 0
+  pdf_layer_info: "фон доски" 1 255 255 255 0
+  pdf_layer_info: "видимая сетка" 2 255 255 255 0
+  pdf_layer_info: "подсветка" 3 255 255 255 0
+  pdf_layer_info: "метки" 4 0 0 0 1
+  pdf_layer_info: "безхозный" 5 0 0 0 1
+  pdf_layer_info: "контур детали" 6 79 79 79 1
+  pdf_layer_info: "обозначения" 7 0 0 166 1
+  pdf_layer_info: "линни пинов" 8 0 0 0 1
+  pdf_layer_info: "имена пинов" 9 0 0 0 1
+  pdf_layer_info: "линни цепей" 10 0 0 64 1
+  pdf_layer_info: "имена цепей" 11 0 0 0 1
+  pdf_layer_info: "футпринты" 12 166 0 0 1
+  pdf_layer_info: "названия" 13 0 0 0 1
+  pdf_layer_info: "описания" 14 0 0 0 1
+  pdf_layer_info: "верхний 1" 15 0 0 0 1
+  pdf_layer_info: "верхний 2" 16 127 127 127 1
+  pdf_layer_info: "нижний 1" 17 254 254 254 1
+  pdf_layer_info: "нижний 2" 18 164 164 164 1
+  pdf_layer_info: "нижний 3" 19 99 190 211 1
+  pdf_layer_info: "нижний 4" 20 60 110 200 1
+  pdf_layer_info: "нижний 5" 21 255 255 255 1
+  pdf_layer_info: "нижний 6" 22 64 128 128 1
+  pdf_layer_info: "нижний 7" 23 255 255 255 0
+  pdf_layer_info: "нижний 8" 24 255 255 255 0
+  pdf_layer_info: "нижний 9" 25 255 255 255 0
+  pdf_layer_info: "нижний 10" 26 255 255 255 0
+  pdf_layer_info: "нижний 11" 27 255 255 255 0
+  pdf_layer_info: "нижний 12" 28 255 255 255 0
+  pdf_layer_info: "нижний 13" 29 255 255 255 0
+  pdf_layer_info: "нижний 14" 30 255 255 255 0
   pdf_layer_info: "undefined" 31 255 255 255 0
 
-m_bom_colors: 0 0 0 155 155 155 0 0 0 166 166 166 255 255 111 0 0 255 255 193 193
+m_bom_colors: 0 0 0 155 155 155 0 0 0 166 166 166 255 255 111 0 0 255 234 234 234
 [end]
