--- a/Debug/default_cds.cfg
+++ b/Debug/default_cds.cfg
@@ -4,7 +4,7 @@ version: 1.419
 file_version: 1.419
 project_name: "D6384-1-01.cds"
 library_folder: "D:\FreePCBDev\Schematic Constructor\.\Projects\micronics\lib"
-parent_folder: "D:\FreePCBDev\Schematic Constructor\.\Projects"
+parent_folder: "d:\freepcbdev\schematic constructor\.\projects"
 full_library_folder: "?\micronics\lib\footprints"
 CAM_folder: ""
 netlist_completed: "0"
@@ -208,5 +208,5 @@ pdf_checking: 34
   pdf_layer_info: "нижний 14" 30 255 255 255 0
   pdf_layer_info: "undefined" 31 255 255 255 0
 
-m_bom_colors: 0 0 0 155 155 155 0 0 0 166 166 166 255 255 111 0 0 255 255 255 255
+m_bom_colors: 0 0 0 155 155 155 0 0 0 166 166 166 255 255 111 0 0 255 140 140 140
 [end]
