--- a/Debug/default_cds.cfg
+++ b/Debug/default_cds.cfg
@@ -4,7 +4,7 @@ version: 1.419
 file_version: 1.419
 project_name: "D6384-1-01.cds"
 library_folder: "D:\FreePCBDev\Schematic Constructor\.\Projects\micronics\lib"
-parent_folder: "d:\freepcbdev\schematic constructor\.\projects"
+parent_folder: "D:\FreePCBDev\Schematic Constructor\.\Projects"
 full_library_folder: "?\micronics\lib\footprints"
 CAM_folder: ""
 netlist_completed: "0"
