--- a/Debug/default_cds.cfg
+++ b/Debug/default_cds.cfg
@@ -1,21 +1,21 @@
 [options]
 
-version: 1.419
-file_version: 1.419
-project_name: "D6384-1-01.cds"
-library_folder: "D:\FreePCBDev\Schematic Constructor\.\Projects\micronics\lib"
-parent_folder: "D:\FreePCBDev\Schematic Constructor\.\Projects"
-full_library_folder: "?\micronics\lib\footprints"
+version: 1.420
+file_version: 1.420
+project_name: "Cab-tester-02.cds"
+library_folder: "D:\FreePCBDev\Schematic Constructor\.\Projects\lib"
+parent_folder: "D:\Works\Projects"
+full_library_folder: "d:\freepcbdev\schematic constructor\.\projects\lib\footprints"
 CAM_folder: ""
 netlist_completed: "0"
-bom_options: "160"
+bom_options: "721056"
 page_number: "0"
 parent_index: "2"
 alignment: 0.70
 partlist_size_x: "534"
 partlist_size_y: "391"
-partlist_pos_x: "1088"
-partlist_pos_y: "95"
+partlist_pos_x: "105"
+partlist_pos_y: "69"
 partlist_col_w: "960223292"
 find_component: "https://www.google.com/search?q="
 special_chars: "°±©"
@@ -23,16 +23,16 @@ netlist_file_path: ""
 netlist_format: 0
 page_mirror_mask: 0
 default_font: 11
-default_node_width: -1100000
+default_node_width: -1000000
 autosave_interval: 60
 m_client_rect_left: 0
 m_client_rect_right: 1132
-m_client_rect_bottom: 713
+m_client_rect_bottom: 711
 m_client_rect_top: 0
-m_org_x: -44382
-m_org_y: -21114
-m_scale_factor: 30454
-m_attr_size: 500000 50000 1000000 110000 1000000 110000 1000000 110000 500000 50000 500000 50000
+m_org_x: -40737
+m_org_y: -40282
+m_scale_factor: 344531
+m_attr_size: 1100000 150000 1100000 150000 1100000 150000 1100000 150000 1100000 150000 1100000 150000
 m_system_colors: 1
 m_measure_scale: 30
 m_arrow_scale: 7
@@ -68,7 +68,7 @@ visible_grid_spacing: 2000000.000000
   visible_grid_item: 50mm
   visible_grid_item: 100mm
 
-polyline_grid_spacing: 200000.000000
+polyline_grid_spacing: 500000.000000
   placement_grid_item: 5mil
   placement_grid_item: 10mil
   placement_grid_item: 20mil
@@ -98,7 +98,7 @@ polyline_grid_spacing: 200000.000000
   placement_grid_item: 5mm
   placement_grid_item: 10mm
 
-text_grid_spacing: 250000.000000
+text_grid_spacing: 100000.000000
   text_grid_item: 0.1mil
   text_grid_item: 0.5mil
   text_grid_item: 1mil
@@ -143,13 +143,13 @@ cam_units: 1
 
 report_options: 0
 drc_check_unrouted: 0
-drc_part_attr_to_attr: 0
-drc_part_attr_to_poly: -10000000
+drc_part_attr_to_attr: 100000
+drc_part_attr_to_poly: 100000
 drc_pin_attr_to_attr: 254000
 drc_pin_attr_to_poly: 254000
 
 default_polyline_width:0.2mm
-n_additional_layers: 6
+n_additional_layers: 4
 m_pdf_font_i: 22
 m_pdf_margin: 0.01
 pdf_checking: 34
@@ -172,8 +172,6 @@ pdf_checking: 34
   layer_info: "верхний 2" 16 0 255 0 1
   layer_info: "нижний 1" 17 0 0 0 1
   layer_info: "нижний 2" 18 128 128 255 1
-  layer_info: "нижний 3" 19 99 190 211 1
-  layer_info: "нижний 4" 20 60 110 200 1
 
   pdf_layer_info: "перемещение" 0 255 255 255 0
   pdf_layer_info: "фон доски" 1 255 255 255 0
@@ -194,8 +192,8 @@ pdf_checking: 34
   pdf_layer_info: "верхний 2" 16 127 127 127 1
   pdf_layer_info: "нижний 1" 17 254 254 254 1
   pdf_layer_info: "нижний 2" 18 164 164 164 1
-  pdf_layer_info: "нижний 3" 19 99 190 211 1
-  pdf_layer_info: "нижний 4" 20 60 110 200 1
+  pdf_layer_info: "нижний 3" 19 255 255 0 1
+  pdf_layer_info: "нижний 4" 20 0 0 0 1
   pdf_layer_info: "нижний 5" 21 255 255 255 1
   pdf_layer_info: "нижний 6" 22 64 128 128 1
   pdf_layer_info: "нижний 7" 23 255 255 255 0
