--- a/Debug/default_cds.cfg
+++ b/Debug/default_cds.cfg
@@ -1,21 +1,21 @@
 [options]
 
-version: 1.420
-file_version: 1.420
-project_name: "Cab-tester-02.cds"
-library_folder: "D:\FreePCBDev\Schematic Constructor\.\Projects\lib"
-parent_folder: "D:\Works\Projects"
-full_library_folder: "d:\freepcbdev\schematic constructor\.\projects\lib\footprints"
+version: 1.421
+file_version: 1.421
+project_name: "Grainger-01.cds"
+library_folder: "d:\works\projects\micronics\lib"
+parent_folder: "d:\works\projects"
+full_library_folder: "?\micronics\lib\footprints"
 CAM_folder: ""
 netlist_completed: "0"
-bom_options: "721056"
+bom_options: "720928"
 page_number: "0"
 parent_index: "2"
 alignment: 0.70
-partlist_size_x: "534"
-partlist_size_y: "391"
-partlist_pos_x: "105"
-partlist_pos_y: "69"
+partlist_size_x: "636"
+partlist_size_y: "226"
+partlist_pos_x: "115"
+partlist_pos_y: "80"
 partlist_col_w: "960223292"
 find_component: "https://www.google.com/search?q="
 special_chars: "°±©"
@@ -23,23 +23,23 @@ netlist_file_path: ""
 netlist_format: 0
 page_mirror_mask: 0
 default_font: 11
-default_node_width: -1000000
+default_node_width: -800000
 autosave_interval: 60
 m_client_rect_left: 0
 m_client_rect_right: 1132
 m_client_rect_bottom: 711
 m_client_rect_top: 0
-m_org_x: -40737
-m_org_y: -40282
-m_scale_factor: 344531
-m_attr_size: 1100000 150000 1100000 150000 1100000 150000 1100000 150000 1100000 150000 1100000 150000
+m_org_x: -4470
+m_org_y: 5447
+m_scale_factor: 97967
+m_attr_size: 1000000 100000 1000000 100000 1000000 100000 1000000 100000 1000000 100000 1000000 100000
 m_system_colors: 1
 m_measure_scale: 30
 m_arrow_scale: 7
 units: MM
 
 m_sel_mask: -1
-m_visible_layers: 2097147
+m_visible_layers: 524283
 m_top_layer: 6
 m_grid_style: 0
 visible_grid_spacing: 2000000.000000
