--- a/Debug/default_cds.cfg
+++ b/Debug/default_cds.cfg
@@ -1,21 +1,21 @@
 [options]
 
-version: 1.426
-file_version: 1.426
-project_name: "Grainger-03.cds"
-library_folder: "d:\works\projects\micronics\lib"
+version: 1.427
+file_version: 1.427
+project_name: "Septic Tank Overflow Inspector-01.cds"
+library_folder: "D:\FreePCBDev\Schematic Constructor\.\fp_lib"
 parent_folder: "d:\works\projects"
-full_library_folder: "?\micronics\lib\footprints"
-CAM_folder: ""
+full_library_folder: "d:\freepcbdev\schematic constructor\.\fp_lib\lib"
+CAM_folder: "C:\Users\Duxah\Desktop\Duxah\FreePcbDoc\TRASH\PCB\Septic Tank Overflow Inspector\version-01\CAM(Septic Tank Overflow Inspector-01)"
 netlist_completed: "0"
-bom_options: "1074462880"
+bom_options: "1074462752"
 page_number: "1"
 parent_index: "2"
 alignment: 0.70
-partlist_size_x: "636"
-partlist_size_y: "178"
-partlist_pos_x: "216"
-partlist_pos_y: "86"
+partlist_size_x: "534"
+partlist_size_y: "391"
+partlist_pos_x: "105"
+partlist_pos_y: "69"
 partlist_col_w: "960223292"
 find_component: "https://www.google.com/search?q="
 special_chars: "°±©"
@@ -23,24 +23,24 @@ netlist_file_path: ""
 netlist_format: 0
 page_mirror_mask: 0
 default_font: 11
-default_node_width: -800000
+default_node_width: -1500000
 autosave_interval: 60
 m_client_rect_left: 0
 m_client_rect_right: 1132
 m_client_rect_bottom: 712
 m_client_rect_top: 0
-m_org_x: -44965
-m_org_y: -39158
-m_scale_factor: 140022
-m_attr_size: 1000000 100000 1000000 100000 1000000 100000 1000000 100000 1000000 100000 1000000 100000
+m_org_x: -298369
+m_org_y: 3576
+m_scale_factor: 409740
+m_attr_size: 2200000 300000 2200000 300000 2200000 300000 2200000 300000 2200000 300000 2200000 300000
 m_system_colors: 1
 m_measure_scale: 30
 m_arrow_scale: 7
 units: MM
 
-m_sel_mask: -1
-m_visible_layers: 524283
-m_top_layer: 10
+m_sel_mask: -65
+m_visible_layers: -5
+m_top_layer: 8
 m_grid_style: 0
 visible_grid_spacing: 2000000.000000
   visible_grid_item: 20mil
@@ -68,7 +68,7 @@ visible_grid_spacing: 2000000.000000
   visible_grid_item: 50mm
   visible_grid_item: 100mm
 
-polyline_grid_spacing: 500000.000000
+polyline_grid_spacing: 250000.000000
   placement_grid_item: 5mil
   placement_grid_item: 10mil
   placement_grid_item: 20mil
@@ -149,7 +149,7 @@ drc_part_attr_to_poly: 100000
 drc_pin_attr_to_attr: 254000
 drc_pin_attr_to_poly: 254000
 
-default_polyline_width:0.2mm
+default_polyline_width:0.3mm
 n_additional_layers: 4
 m_pdf_font_i: 22
 m_pdf_margin: 0.01
