report for panelizations

--- a/Debug/CSVFileView.cfg
+++ b/Debug/CSVFileView.cfg
@@ -4,7 +4,7 @@ SaveFilterIndex=0
 ShowInfoTip=1
 AutoNumericSorting=1
 AutoDateSorting=1
-FirstLineColumnNames=0
+FirstLineColumnNames=1
 DefaultColumnNames=1
 AddExportHeaderLine=1
 MarkOddEvenRows=0
@@ -28,7 +28,7 @@ AdvancedOpen.Filename=D:\Works\Projects\Micronics\Smart-Servo-1\version-01\relat
 LoadOnlyLinesMode=0
 LoadOnlyLinesNumber=100
 SortAfterLoading=1
-AutoColumnSize=1
+AutoColumnSize=3
 AutoRefreshMode=2
 AutoScrollBottomOnNewLine=1
 BeepOnNewLine=1
@@ -46,7 +46,7 @@ QuickFilterString=
 QuickFilterColumnsMode=1
 QuickFilterFindMode=1
 QuickFilterShowHide=1
-DisplayFilter=
+DisplayFilter=SIDE CONTAINS 'top'
 ItemIcon=
 WinPos=2C 00 00 00 00 00 00 00 01 00 00 00 FF FF FF FF FF FF FF FF FF FF FF FF FF FF FF FF 35 01 00 00 67 00 00 00 D5 06 00 00 4B 03 00 00
 [RecentFiles]
