--- a/Debug/default_cds.cfg
+++ b/Debug/default_cds.cfg
@@ -1,18 +1,17 @@
 [options]
 
-app_folder: "D:\FreePCBDev\Schematic Constructor\.\Debug"
 version: 1.427
 file_version: 1.427
-project_name: "W-CAN.cds"
+project_name: "Smart-Servo-1-01.cds"
 library_folder: "d:\works\projects\micronics\lib"
 parent_folder: "d:\works\projects"
 full_library_folder: "?\micronics\lib\footprints"
 CAM_folder: ""
 netlist_completed: "0"
-bom_options: "160"
-page_number: "2"
+bom_options: "16777376"
+page_number: "3"
 parent_index: "2"
-alignment: 0.70
+alignment: 0.80
 partlist_size_x: "534"
 partlist_size_y: "391"
 partlist_pos_x: "1088"
@@ -24,26 +23,26 @@ netlist_file_path: ""
 netlist_format: 0
 page_mirror_mask: 0
 default_font: 11
-default_node_width: -733333
+default_node_width: -1100095
 autosave_interval: 60
 m_client_rect_left: 0
 m_client_rect_right: 1131
 m_client_rect_bottom: 712
 m_client_rect_top: 0
-m_org_x: -152605
-m_org_y: -162500
-m_scale_factor: 489977
-m_attr_size: 500000 53333 500000 53333 500000 53333 500000 53333 1000000 113333 500000 53333
+m_org_x: -69172
+m_org_y: -103859
+m_scale_factor: 239511
+m_attr_size: 1414007 113120 1414007 113120 989805 113120 1414007 113120 1414007 113120 1414007 113120
 m_system_colors: 1
 m_measure_scale: 30
 m_arrow_scale: 7
 units: MM
 
-m_sel_mask: -66
+m_sel_mask: -1
 m_visible_layers: -5
-m_top_layer: 6
+m_top_layer: 8
 m_grid_style: 0
-visible_grid_spacing: 500000.000000
+visible_grid_spacing: 2500000.000000
   visible_grid_item: 20mil
   visible_grid_item: 50mil
   visible_grid_item: 100mil
@@ -69,7 +68,7 @@ visible_grid_spacing: 500000.000000
   visible_grid_item: 50mm
   visible_grid_item: 100mm
 
-polyline_grid_spacing: 500000.000000
+polyline_grid_spacing: 400000.000000
   placement_grid_item: 5mil
   placement_grid_item: 10mil
   placement_grid_item: 20mil
@@ -99,7 +98,7 @@ polyline_grid_spacing: 500000.000000
   placement_grid_item: 5mm
   placement_grid_item: 10mm
 
-text_grid_spacing: 250000.000000
+text_grid_spacing: 100000.000000
   text_grid_item: 0.1mil
   text_grid_item: 0.5mil
   text_grid_item: 1mil
@@ -150,11 +149,11 @@ drc_part_attr_to_poly: 100000
 drc_pin_attr_to_attr: 254000
 drc_pin_attr_to_poly: 254000
 
-default_polyline_width:0.133mm
+default_polyline_width:0.201mm
 n_additional_layers: 12
 m_pdf_font_i: 22
 m_pdf_margin: 0.01
-pdf_checking: 40
+pdf_checking: 48
   layer_info: "перемещение" 0 130 130 130 1
   layer_info: "фон доски" 1 178 178 178 1
   layer_info: "видимая сетка" 2 22 22 22 0
