--- a/Debug/default_cds.cfg
+++ b/Debug/default_cds.cfg
@@ -10,7 +10,7 @@ full_library_folder: "?\micronics\lib\footprints"
 CAM_folder: ""
 netlist_completed: "0"
 bom_options: "16777376"
-page_number: "3"
+page_number: "0"
 parent_index: "2"
 alignment: 0.80
 partlist_size_x: "534"
@@ -30,17 +30,17 @@ m_client_rect_left: 0
 m_client_rect_right: 1131
 m_client_rect_bottom: 712
 m_client_rect_top: 0
-m_org_x: -185945
-m_org_y: -201797
-m_scale_factor: 493711
+m_org_x: -189977
+m_org_y: -96552
+m_scale_factor: 666245
 m_attr_size: 1410000 110000 1410000 110000 990000 110000 1410000 110000 1410000 110000 1410000 110000
 m_system_colors: 1
 m_measure_scale: 30
 m_arrow_scale: 7
 units: MM
 
-m_sel_mask: -1
-m_visible_layers: -536870917
+m_sel_mask: -65
+m_visible_layers: 134217723
 m_top_layer: 8
 m_grid_style: 0
 visible_grid_spacing: 2500000.000000
