--- a/Debug/default.cfg
+++ b/Debug/default.cfg
@@ -4,11 +4,11 @@ app_folder: "D:\FreePCBDev\FreePCB-2\.\Debug"
 version: 2.427
 file_version: 2.427
 protected: 0
-project_name: "Smart-Servo-1-01"
-library_folder: "d:\works\projects\micronics\lib"
+project_name: "Driver-01"
+library_folder: "d:\works\fp_lib"
 parent_folder: "D:\Works\Projects"
-full_library_folder: "d:\works\projects\micronics\lib\footprints"
-CAM_folder: "D:\Works\Projects\Micronics\Smart-Servo-1\version-01\CAM(Smart-Servo-1-01)(9-11-2025)"
+full_library_folder: "d:\works\fp_lib\lib"
+CAM_folder: "D:\Works\ѕлат‘орм на русском\Projects\Led\version-01\CAM(Driver-01)(9-14-2025)"
 ses_file_path: ""
 netlist_completed: "0"
 font_options: 11 0.90
@@ -21,29 +21,29 @@ dsn_flags: "3"
 dsn_bounds_poly: "0"
 dsn_signals_poly: "0"
 autosave_interval: 60
-auto_ratline_disable: "0"
+auto_ratline_disable: "1"
 auto_ratline_disable_min_pins: "100"
-netlist_import_flags: 2991
+netlist_import_flags: 19399
 m_client_rect_left: 110
 m_client_rect_right: 1487
 m_client_rect_bottom: 711
 m_client_rect_top: 0
-m_org_x: -56043
-m_org_y: 5512
-m_scale_factor: 92866
+m_org_x: -50517
+m_org_y: -17593
+m_scale_factor: 77243
 part_line_visible: 1
 merge_shown: 1
 m_pin_state: 15
 m_system_colors: 1
-pdf_pin1: -0.700000
-pdf_use_font: 355600 355600 355600
+pdf_pin1: 0.700000
+pdf_use_font: -889000 889000 -635000
 units: MM
 
 m_sel_mask: 2147483645
-m_visible_layers: -84233
+m_visible_layers: -84225
 m_top_layer: 13
 m_grid_style: 0
-visible_grid_spacing: 1000000.000000
+visible_grid_spacing: 20000000.000000
   visible_grid_item: 100mil
   visible_grid_item: 125mil
   visible_grid_item: 200mil
@@ -63,7 +63,7 @@ visible_grid_spacing: 1000000.000000
   visible_grid_item: 50mm
   visible_grid_item: 100mm
 
-placement_grid_spacing: 400000.000000
+placement_grid_spacing: 100000.000000
   placement_grid_item: 10mil
   placement_grid_item: 20mil
   placement_grid_item: 25mil
@@ -142,7 +142,7 @@ fp_visible_grid_spacing: 1000000.000000
   fp_visible_grid_item: 50mm
   fp_visible_grid_item: 100mm
 
-fp_placement_grid_spacing: 100000.000000
+fp_placement_grid_spacing: 500000.000000
   fp_placement_grid_item: 10mil
   fp_placement_grid_item: 20mil
   fp_placement_grid_item: 25mil
@@ -168,16 +168,16 @@ fp_placement_grid_spacing: 100000.000000
 
 fp_snap_angle: 45
 
-m_seg_clearance: 205080
-fill_clearance: 254000
-panel_fields: 7000000 7000000
-panel_holes: 1500000 8
+m_seg_clearance: 204080
+fill_clearance: 300000
+panel_fields: 20000000 20000000
+panel_holes: 3000000 4
 panel_ref_count: 2
 panel_reference: "RectType1"
-panel_scribing: 0
-panel_text: "Smart-Servo-1-01 TOP" "Smart-Servo-1-01 BOTTOM" "Smart-Servo-1-01 TOP" "Smart-Servo-1-01 BOTTOM"
+panel_scribing: 3
+panel_text: "OnTopSilk" "OnBotSilk" "OnTopCopper" "OnBotCopper"
 panel_frame_for_paste: 0 0 0 0
-mask_clearance: 50000
+mask_clearance: 0
 thermal_width: 400000
 thermal_clearance: 200000
 min_silkscreen_width: 150000
@@ -186,9 +186,9 @@ hole_clearance: 400000
 pilot_diameter: 200000
 annular_ring_for_pins: 200000
 annular_ring_for_vias: 200000
-shrink_paste_mask: 50000
-cam_flags: 224
-crop_flags: 28255
+shrink_paste_mask: 0
+cam_flags: 96
+crop_flags: 10500
 crop_data: "0.2" "0.2" "0.2" "0.2" "0.2" "0.2" "0.2" "0.2" "0.2" "+24" "0.2mm" "28287"
 crop_data: "0.2" "0.7" "0.3" "0.3" "0.3" "0.3" "0.3" "0.3" "0.2" "+3V3" "0.3mm" "26207"
 crop_data: "0.4" "0.7" "0.7" "0.7" "0.7" "0.7" "0.7" "0.7" "0.4" "+12V" "0.7mm" "28255"
@@ -199,38 +199,42 @@ crop_data: "0.15" "0.15" "0.15" "0.15" "0.15" "0.15" "0.15" "0.15" "0.15" "GND" 
 crop_data: "0.3" "0.5" "0.5" "0.5" "0.5" "0.5" "0.5" "0.5" "0.5" "GND" "0.5mm" "28255"
 crop_data: "1" "0.5" "0.5" "0.5" "0.5" "0.5" "0.5" "0.5" "0.5" "GND" "User" "10498"
 crop_data: "0.4" "0.4" "0.4" "0.4" "0.4" "0.4" "0.4" "0.4" "0.4" "GND" "0.4mm" "28511"
-cam_layers: 1048831
+cam_layers: 1048639
 cam_drill_file: 1
 cam_units: 1
-cam_n_x: 3
-cam_n_y: 1
-cam_space_x: 2000000
-cam_space_y: 2000000
+cam_n_x: 6
+cam_n_y: 10
+cam_space_x: 5000000
+cam_space_y: 5000000
 
-report_options: 4126
+report_options: 4123
 drc_check_unrouted: 1
-drc_trace_width: 250000
-drc_pad_pad: 200000
-drc_pad_trace: 200000
-drc_trace_trace: 200000
-drc_hole_copper: 400000
+drc_trace_width: 170000
+drc_pad_pad: 199000
+drc_pad_trace: 199000
+drc_trace_trace: 199000
+drc_hole_copper: 200000
 drc_annular_ring_pins: 199000
 drc_annular_ring_vias: 199000
-drc_board_edge_copper: 400000
-drc_board_edge_hole: 550000
-drc_hole_hole: 700000
+drc_board_edge_copper: 200000
+drc_board_edge_hole: 0
+drc_hole_hole: 600000
 drc_copper_copper: 200000
 
 default_trace_width:0.4mm
 default_via_pad_width:1mm
 default_via_hole_width:0.5mm
-n_width_menu: 0
+n_width_menu: 4
+  width_menu_item: 1 0.4mm 0mil 0mil
+  width_menu_item: 2 0.5mm 0mil 0mil
+  width_menu_item: 3 0.7mm 0mil 0mil
+  width_menu_item: 4 1mm 1.5mm 1mm
 
-n_copper_layers: 4
+n_copper_layers: 2
   layer_info: "движение" 0 255 255 0 1 127 127 127 0
   layer_info: "фон доски" 1 239 239 239 1 255 255 255 0
   layer_info: "подсветка" 2 255 255 0 1 0 0 0 0
-  layer_info: "линии сетки" 3 255 255 255 0 255 255 0 1
+  layer_info: "линии сетки" 3 255 255 255 1 255 255 0 1
   layer_info: "тестирование" 4 255 0 0 1 128 64 0 0
   layer_info: "контур платы" 5 0 115 60 1 0 185 120 1
   layer_info: "скрайбинг (V)" 6 255 0 128 1 127 127 127 0
@@ -244,7 +248,5 @@ n_copper_layers: 4
   layer_info: "вид низ" 14 222 111 111 0 127 127 127 0
   layer_info: "медь верх" 15 40 165 90 1 47 255 182 1
   layer_info: "медь низ" 16 30 90 50 0 10 100 20 0
-  layer_info: "медь 1" 17 64 128 64 1 127 127 127 0
-  layer_info: "медь 2" 18 128 64 64 1 127 127 127 0
 
 [end]
