list of elements

--- a/Debug/default_cds.cfg
+++ b/Debug/default_cds.cfg
@@ -1,17 +1,18 @@
 [options]
 
+app_folder: "D:\FreePCBDev\Schematic Constructor\Debug"
 version: 1.427
 file_version: 1.427
-project_name: "BOARD-1-01.cds"
-library_folder: "d:\works\projects\micronics\lib"
+project_name: "Smart-Servo-1-01 - перечень элементов.cds"
+library_folder: "d:\works\fp_lib"
 parent_folder: "d:\works\projects"
-full_library_folder: "?\micronics\lib\footprints"
+full_library_folder: "d:\works\fp_lib\lib"
 CAM_folder: ""
 netlist_completed: "0"
-bom_options: "16777376"
+bom_options: "83886112"
 page_number: "0"
 parent_index: "2"
-alignment: 0.80
+alignment: 0.70
 partlist_size_x: "534"
 partlist_size_y: "391"
 partlist_pos_x: "1088"
@@ -26,13 +27,13 @@ default_font: 11
 default_node_width: -1100000
 autosave_interval: 60
 m_client_rect_left: 0
-m_client_rect_right: 1131
-m_client_rect_bottom: 670
+m_client_rect_right: 1532
+m_client_rect_bottom: 726
 m_client_rect_top: 0
-m_org_x: -121060
-m_org_y: -67338
-m_scale_factor: 259462
-m_attr_size: 1410000 110000 1410000 110000 990000 110000 1410000 110000 1410000 110000 1410000 110000
+m_org_x: -29030
+m_org_y: 91472
+m_scale_factor: 135777
+m_attr_size: 1000000 110000 1000000 110000 1000000 110000 1000000 110000 1000000 110000 1000000 110000
 m_system_colors: 1
 m_measure_scale: 30
 m_arrow_scale: 7
@@ -42,7 +43,7 @@ m_sel_mask: -2
 m_visible_layers: 134217723
 m_top_layer: 6
 m_grid_style: 0
-visible_grid_spacing: 2500000.000000
+visible_grid_spacing: 2000000.000000
   visible_grid_item: 20mil
   visible_grid_item: 50mil
   visible_grid_item: 100mil
@@ -68,7 +69,7 @@ visible_grid_spacing: 2500000.000000
   visible_grid_item: 50mm
   visible_grid_item: 100mm
 
-polyline_grid_spacing: 400000.000000
+polyline_grid_spacing: 5600000.000000
   placement_grid_item: 5mil
   placement_grid_item: 10mil
   placement_grid_item: 20mil
@@ -98,7 +99,7 @@ polyline_grid_spacing: 400000.000000
   placement_grid_item: 5mm
   placement_grid_item: 10mm
 
-text_grid_spacing: 100000.000000
+text_grid_spacing: 250000.000000
   text_grid_item: 0.1mil
   text_grid_item: 0.5mil
   text_grid_item: 1mil
@@ -150,7 +151,7 @@ drc_pin_attr_to_attr: 254000
 drc_pin_attr_to_poly: 254000
 
 default_polyline_width:0.2mm
-n_additional_layers: 12
+n_additional_layers: 4
 m_pdf_font_i: 22
 m_pdf_margin: 0.01
 pdf_checking: 1086
