--- a/Debug/default.cfg
+++ b/Debug/default.cfg
@@ -5,10 +5,10 @@ version: 2.427
 file_version: 2.427
 protected: 0
 project_name: "Driver-01"
-library_folder: "d:\works\fp_lib"
+library_folder: "d:\works\projects\micronics\lib"
 parent_folder: "D:\Works\Projects"
 3d_folder: "d:\works\платформ на русском\3d"
-full_library_folder: "d:\works\fp_lib\lib"
+full_library_folder: "d:\works\projects\micronics\lib\footprints"
 CAM_folder: "D:\Works\Projects\duxahtech\Led\version-01\CAM(Driver-01)(11-9-2025)"
 ses_file_path: ""
 netlist_completed: "0"
@@ -27,11 +27,11 @@ auto_ratline_disable_min_pins: "100"
 netlist_import_flags: 19399
 m_client_rect_left: 0
 m_client_rect_right: 1487
-m_client_rect_bottom: 593
+m_client_rect_bottom: 594
 m_client_rect_top: 0
-m_org_x: -20716
-m_org_y: -15787
-m_scale_factor: 40828
+m_org_x: -11528
+m_org_y: -4624
+m_scale_factor: 21282
 part_line_visible: 1
 merge_shown: 1
 m_pin_state: 15
