--- a/Debug/default_cds.cfg
+++ b/Debug/default_cds.cfg
@@ -1,22 +1,22 @@
 [options]
 
-app_folder: "D:\FreePCBDev\Schematic Constructor\Debug"
+app_folder: "D:\FreePCBDev\Schematic Constructor\.\Debug"
 version: 1.427
 file_version: 1.427
-project_name: "Smart-Servo-1-01 - перечень элементов.cds"
-library_folder: "d:\works\fp_lib"
+project_name: "Grainger-03.cds"
+library_folder: "d:\works\projects\micronics\lib"
 parent_folder: "d:\works\projects"
-full_library_folder: "d:\works\fp_lib\lib"
+full_library_folder: "?\micronics\lib\footprints"
 CAM_folder: ""
 netlist_completed: "0"
-bom_options: "83886112"
-page_number: "0"
+bom_options: "1074462880"
+page_number: "1"
 parent_index: "2"
 alignment: 0.70
-partlist_size_x: "534"
-partlist_size_y: "391"
-partlist_pos_x: "1088"
-partlist_pos_y: "95"
+partlist_size_x: "636"
+partlist_size_y: "226"
+partlist_pos_x: "115"
+partlist_pos_y: "80"
 partlist_col_w: "960223292"
 find_component: "https://www.google.com/search?q="
 special_chars: "°±©"
@@ -24,24 +24,24 @@ netlist_file_path: ""
 netlist_format: 0
 page_mirror_mask: 0
 default_font: 11
-default_node_width: -1100000
+default_node_width: -800000
 autosave_interval: 60
 m_client_rect_left: 0
 m_client_rect_right: 1532
 m_client_rect_bottom: 726
 m_client_rect_top: 0
-m_org_x: -29030
-m_org_y: 91472
-m_scale_factor: 135777
-m_attr_size: 1000000 110000 1000000 110000 1000000 110000 1000000 110000 1000000 110000 1000000 110000
+m_org_x: 23539
+m_org_y: 16227
+m_scale_factor: 37238
+m_attr_size: 1000000 100000 1000000 100000 1000000 100000 1000000 100000 1000000 100000 1000000 100000
 m_system_colors: 1
 m_measure_scale: 30
 m_arrow_scale: 7
 units: MM
 
-m_sel_mask: -2
-m_visible_layers: 134217723
-m_top_layer: 6
+m_sel_mask: -1
+m_visible_layers: -5
+m_top_layer: 5
 m_grid_style: 0
 visible_grid_spacing: 2000000.000000
   visible_grid_item: 20mil
@@ -69,7 +69,7 @@ visible_grid_spacing: 2000000.000000
   visible_grid_item: 50mm
   visible_grid_item: 100mm
 
-polyline_grid_spacing: 5600000.000000
+polyline_grid_spacing: 500000.000000
   placement_grid_item: 5mil
   placement_grid_item: 10mil
   placement_grid_item: 20mil
@@ -99,7 +99,7 @@ polyline_grid_spacing: 5600000.000000
   placement_grid_item: 5mm
   placement_grid_item: 10mm
 
-text_grid_spacing: 250000.000000
+text_grid_spacing: 100000.000000
   text_grid_item: 0.1mil
   text_grid_item: 0.5mil
   text_grid_item: 1mil
@@ -154,7 +154,7 @@ default_polyline_width:0.2mm
 n_additional_layers: 4
 m_pdf_font_i: 22
 m_pdf_margin: 0.01
-pdf_checking: 1086
+pdf_checking: 1028
   layer_info: "перемещение" 0 130 130 130 1
   layer_info: "фон доски" 1 178 178 178 1
   layer_info: "видимая сетка" 2 22 22 22 0
@@ -182,11 +182,11 @@ pdf_checking: 1086
   layer_info: "чертёжный" 24 159 45 156 1
   layer_info: "текстовый" 25 250 250 250 1
   layer_info: "вёрсточный" 26 250 250 250 1
-  layer_info: "механический" 27 250 250 250 0
-  layer_info: "линейный" 28 250 250 250 0
-  layer_info: "резервный" 29 250 250 250 0
-  layer_info: "запасной" 30 250 250 250 0
-  layer_info: "undefined" 31 250 250 250 0
+  layer_info: "механический" 27 250 250 250 1
+  layer_info: "линейный" 28 250 250 250 1
+  layer_info: "резервный" 29 250 250 250 1
+  layer_info: "запасной" 30 250 250 250 1
+  layer_info: "undefined" 31 250 250 250 1
 
   pdf_layer_info: "перемещение" 0 255 255 255 0
   pdf_layer_info: "фон доски" 1 255 255 255 0
